[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "product-memory-mcp"
version = "0.1.0"
description = "MCP server for the Product Memory Layer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
product-memory-mcp = "product_memory_mcp.server:main"
product-memory-mcp-http = "product_memory_mcp.http_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
